FullQa New/src/objects/Return__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Returns</relationshipLabel>
        <relationshipName>Returns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Billed__c</fullName>
        <label>Billed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Chased_Figures__c</fullName>
        <label>Chased Figures</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Figures_Received__c</fullName>
        <label>Figures Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Figures_in_AvaTax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Figures in AvaTax?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Return_Deadline__c</fullName>
        <label>Return Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Return_Notes__c</fullName>
        <label>Return Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Return_Reporting_Period__c</fullName>
        <label>Return Reporting Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Returns_Country__c</fullName>
        <label>Returns Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Ireland (MOSS)</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Norway VoES</fullName>
                </value>
                <value>
                    <fullName>Poland</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>South Korea</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>Sweden</fullName>
                </value>
                <value>
                    <fullName>Switzerland</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>UK (MOSS)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sent_to_Network__c</fullName>
        <label>Sent to Network</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submitted__c</fullName>
        <label>Submitted</label>
        <type>Date</type>
    </fields>
    <label>Return</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Return Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Returns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>